# quantum_annealing_traffic

./: README.md  pyproject.toml  requirements.txt  setup.cfg
experiments/: compare_classical_quantum.py  demo_scalability.py  extended_sweep.py  run_demo.py
results/logs/: demo_sa_grid4_d10.csv  demo_sa_grid4_d20.csv  demo_sa_grid4_d3.csv  demo_sa_grid4_d4.csv  demo_sa_grid4_d6.csv
src/: annealing.py  baselines.py  config.py  formulation.py  graph_setup.py  log_analysis.py  main.py  metrics.py  network.py  network_builder.py  network_config.py  param_grid.py  quantum_solvers.py  qubo_formulation.py  quick_sweep.py  traffic_sim.py  visualize.py
src/quantum_annealing_traffic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_annealing.py  test_formulation.py  test_network.py  test_sim.py  trip_simulation.py
