[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-annealing-traffic"
version = "0.1.0"
description = "Classical vs Quantum annealing for traffic optimization"
authors = [
  { name = "Sourav Saha" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "networkx",
  "matplotlib",
  "pandas",
  "qiskit",
  "dimod",
]

[tool.setuptools.packages.find]
where = ["src"]